fix: fixing styles, gaps, links names

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,8 @@
 
 a {
   text-decoration: none;
-}
 
-a:hover {
-  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+  }
 }
