--- a/src/modules/Footer/Footer.scss
+++ b/src/modules/Footer/Footer.scss
@@ -2,30 +2,30 @@
   display: flex;
   flex-direction: column;
   background-color: black;
-  padding: 30px 0 30px 0;
+  padding: 30px 0;
   align-items: center;
-}
 
-.footer__title {
-  display: flex;
-  flex-direction: column;
-  margin: 20px 30px;
-}
+  &__title {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 30px;
+  }
 
-.first-list li {
-  list-style-type: none;
-  margin: 16px 95px 0 0;
-  font-size: 13px;
-  cursor: pointer;
-}
+  .first-list {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: start;
+    margin: 20px 0;
+    padding-inline-start: 0;
 
-.first-list {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  text-align: start;
-  margin: 20px 0;
-  padding-inline-start: 0;
+    li {
+      list-style-type: none;
+      margin: 16px 95px 0 0;
+      font-size: 13px;
+      cursor: pointer;
+    }
+  }
 }
 
 @media screen and (max-width: 460px) {
